[MSE] appending to the source buffer will not throw when the source buffer is full. https://bugs.webkit.org/show_bug.cgi?id=230672 rdar://problem/83496195

Reviewed by Eric Carlson.

Source/WebCore:

Tests: media/media-source/media-source-append-buffer-full-quota-exceeded-error.html

* platform/graphics/PlatformTimeRanges.cpp:
(WebCore::PlatformTimeRanges::findWithEpsilon): add method.
(WebCore::PlatformTimeRanges::copyWithEpsilon const): add method.
* platform/graphics/PlatformTimeRanges.h:
* platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::evictCodedFrames):

LayoutTests:

* media/media-source/media-source-append-buffer-full-quota-exceeded-error-expected.txt:
* media/media-source/media-source-append-buffer-full-quota-exceeded-error.html:


Canonical link: https://commits.webkit.org/242155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283097 268f45cc-cd09-0410-ab3c-d52691b4dbfc