Source/WebCore/platform/graphics/PlatformTimeRanges.h
@@ -42,6 +42,8 @@ public:
     explicit PlatformTimeRanges() { }
     PlatformTimeRanges(const MediaTime& start, const MediaTime& end);
 
+    PlatformTimeRanges copyWithEpsilon(const MediaTime&) const;
+
     MediaTime start(unsigned index) const;
     MediaTime start(unsigned index, bool& valid) const;
     MediaTime end(unsigned index) const;
@@ -61,6 +63,7 @@ public:
     bool contain(const MediaTime&) const;
 
     size_t find(const MediaTime&) const;
+    size_t findWithEpsilon(const MediaTime&, const MediaTime& epsilon);
     
     MediaTime nearest(const MediaTime&) const;
 
